--- a/css/work.css
+++ b/css/work.css
@@ -20,6 +20,25 @@ body {
   padding: 0;
 }
 
+.skip-links a {
+position: absolute;
+top: -3em;
+}
+
+.skip-links {
+visibility: hidden;
+position: absolute;
+}
+
+.skip-links a:focus {
+top: 1em;
+}
+
+.skip-links:focus {
+top: 1em;
+visibility: visible;
+}
+
 header {
   padding: 1rem;
   padding-top: 1.5rem;
